- (experimental) implemented rewriters (models that are responsible for defining rewriting classes) : eval() should not be a requirement anymore - implemented a messages system dedicated to the extension (rough version) - added customization parameters at global-level : possibility to ignore custom widths/alignments/headers for grid columns, pinnable actions block (including pager, export, mass-actions, search buttons), custom pagination values (grid-level expected in a next version) - refactored system configuration (different sections in a dedicated tab, more should follow) - some small fixes

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -38,9 +38,12 @@
 "Attribute Code","Code attribut"
 "Attributes Values Rendering","Rendu des valeurs d'attributs"
 "Auto-generated","Auto-généré"
+"Auto-generated Class Files","Fichiers de classe auto-générés"
 "Available variables : <strong>{is_eu_country}</strong>, <strong>{country_code}</strong>, <strong>{country_name}</strong><br />(variables will be replaced by the corresponding values).<br />If no value is set, ""{is_eu_country}"" will be used by default","Variables disponibles : <strong>{is_eu_country}</strong>, <strong>{country_code}</strong>, <strong>{country_name}</strong><br />(les variables seront remplacées par les valeurs correspondantes).<br />Si aucune valeur n'est renseignée, ""{is_eu_country}"" sera utilisé par défaut"
 "Back","Retour"
 "Base Class","Classe de base"
+"Base Configuration","Configuration - Base"
+"Base Configuration (Menu Link)","Configuration - Base (lien du menu)"
 "Base Display Format","Format d'affichage de base"
 "Billing Address","Adresse de facturation"
 "Block ID","ID bloc"
@@ -60,6 +63,7 @@
 "Choose ""Yes"" if you do not want the field labels to be displayed in the header","Choissez ""Oui"" si vous ne voulez pas que les libellés des champs soient affichés en en-tête"
 "Choose ""Yes"" to display IDs instead of names","Choisissez ""Oui"" pour afficher les identifiants plutôt que les noms"
 "Choose ""Yes"" to filter values that either use config or not. Else, the filter type will depend on the type of the field","Choisissez ""Oui"" pour filtrer les valeurs qui utilisent les paramètres de la configuration ou pas. Sinon, le type de filtre dépendra du type du champ"
+"Choose ""Yes"" to make the base pagination values be added to the custom ones","Choisissez ""Oui"" pour que les valeurs de pagination de base soient ajoutées à celles personnalisées"
 "Choose ""Yes"" to use a custom source of EU countries.<br /><strong>For Magento versions < 1.7, you should always use this option as there is no base EU countries list by default</strong>","Choisissez ""Oui"" pour utiliser une source personnalisée de pays de l'UE.<br /><strong>Pour les versions de Magento < 1.7, vous devriez toujours utiliser cette option étant donné qu'il n'existe aucune liste de pays de l'UE par défaut</strong>"
 "Choose Categories To Filter","Choisir les catégories à filtrer"
 "Choose Editable Columns","Choisir les colonnes éditables"
@@ -99,6 +103,7 @@
 "Custom Columns","Colonnes personnalisées"
 "Custom Columns:","Colonnes personnalisées :"
 "Custom Default Parameters Behaviour","Comportement des paramètres par défaut personnalisés"
+"Custom Default Parameters Behaviour - Default Values","Comportement des paramètres par défaut personnalisés - Valeurs par défaut"
 "Custom Filter - Number","Filtre personnalisé - Nombre"
 "Custom Filter - Operator","Filtre personnalisé - Opérateur"
 "Custom Grid","Grille personnalisée"
@@ -106,6 +111,7 @@
 "Custom Grids","Grilles personnalisées"
 "Custom Grids Configuration","Configuration des grilles personnalisées"
 "Custom List","Liste personnalisée"
+"Custom Pagination Values","Valeurs de pagination personnalisées"
 "Custom Source","Source personnalisée"
 "Customer","Client"
 "Customer Groups","Groupes de client"
@@ -114,6 +120,7 @@
 "Customizable","Personnalisable"
 "Customization : %s","Personnalisation : %s"
 "Customization Parameters","Paramètres de personnalisation"
+"Customization Parameters - Default Values","Paramètres de personnalisation - Valeurs par défaut"
 "Customize Columns","Personnaliser les colonnes"
 "Customize Grid Columns","Personnaliser les colonnes"
 "Date","Date"
@@ -122,6 +129,7 @@
 "Default","Défaut"
 "Default (Last Set Value is Used)","Défaut (la dernière valeur spécifiée est utilisée)"
 "Default Options Source","Source d'options par défaut"
+"Default Pagination Value","Valeur de pagination par défaut"
 "Default Values","Valeurs par défaut"
 "Delete","Supprimer"
 "Delete File Before Save","Supprimer le fichier avant la sauvegarde"
@@ -134,6 +142,9 @@
 "Display ""%s""","Afficher ""%s"""
 "Display Complete Images URLs","Afficher les URLs d'images complètes"
 "Display Currency","Devise d'affichage"
+"Display Error Messages","Afficher les messages d'erreur"
+"Display Error Messages","Afficher les messages d'erreur"
+"Display Error Messages If Rewrite Success","Afficher les messages d'erreurs si succès de la réécriture"
 "Display Format","Format d'affichage"
 "Display Full Path","Afficher le chemin complet"
 "Display Full Paths","Afficher les chemins complets"
@@ -159,6 +170,8 @@
 "Displays whether a country belongs to the EU","Affiche si un pays appartient à l'UE"
 "Drag'n'drop is the most convenient way for sorting columns, but imposes their order number, and may be slow in some cases.<br />Choose ""<strong>No</strong>"" to specify columns orders numbers directly in corresponding text fields.","Le drag'n'drop est la manière la plus commode de trier les colonnes, mais impose leur numéro d'ordre, et peut être lent dans certains cas.<br />Choisissez ""<strong>Non</strong>"" pour spécifier les numéros d'ordre de colonnes directement dans les champs texte correspondants."
 "Duplicated","Dupliqués"
+"EAG - Base Configuration","EAG - Configuration de base"
+"EAG - Rewriters Configuration","EAG - Configuration des réécriveurs"
 "Edit","Editer"
 "Edit Columns Values","Editer les valeurs des colonnes"
 "Edit Default Parameters","Editer les paramètres par défaut"
@@ -172,9 +185,11 @@
 "Enabled","Activé"
 "Enabled/Disabled","Activé/Désactivé"
 "Equal","Egal"
+"Error messages are written to the exceptions log","Les messages d'erreur sont écrits dans le log des exceptions"
 "Escape HTML","Echapper le HTML"
 "EU Countries","Pays de l'UE"
 "EU Country","Pays de l'UE"
+"eval()ed Classes","Classes eval()uées"
 "Exact Filter","Filtre exact"
 "Exceptions Handling Mode","Mode de gestion des exceptions"
 "Exceptions List","Liste des exceptions"
@@ -236,13 +251,16 @@
 "If needed, indicate here the level on which to stop ascent for the full paths display. One level will be displayed in all cases, even if the concerned category has a lower level","Si besoin, indiquez ici le niveau sur lequel arrêter la remontée dans les chemins complets. Un niveau sera affiché dans tous les cas, même si la catégorie concernée a un niveau inférieur"
 "If no currency is found with choosen column, then base currency will be used","Si aucune devise n'est trouvée avec la colonne choisie, alors la devise de base sera utilisée"
 "If no ID is found, then the value corresponding to the given key will be displayed. If none is set, ""store_name"" will be used","Si aucun identifiant n'est trouvé, alors la valeur correspondant à la clé donnée sera affichée. Si rien n'est renseigné, ""store_name"" sera utilisé"
-"If no value is set, "","" will be used","Si aucune valeur n'est renseignée, "","" sera utilisé"
+"If no value is set, "","" will be used","Si aucune valeur n'est définie, "","" sera utilisé"
 "If no value is set, then the base display format will be used","Si aucune valeur n'est renseignée, le format d'affichage de base sera utilisé"
 "If you choose ""No"", filter will apply on images existence","Si vous choisissez ""Non"", le filtre s'appliquera à l'existence des images"
 "If you choose ""No"", only images names will be displayed","Si vous choisissez ""Non"", seulement les noms d'images seront affichés"
 "If you choose ""Yes"", the images / names will point to the original images URLs.","Si vous choisissez ""Oui"", les images / noms pointeront vers les URLs des images originales"
 "If you specify an image height, then you should indicate an image width too","Si vous spécifiez une hauteur d'image, alors vous devriez spécifier une largeur d'image aussi"
 "If you specify an image width, then you should indicate an image height too","Si vous spécifiez une largeur d'image, alors vous devriez spécifier une hauteur d'image aussi"
+"Ignore Custom Alignments (Base Grid Columns)","Ignorer les alignements personnalisés (colonnes de base des grilles)"
+"Ignore Custom Headers (Base Grid Columns)","Ignorer les en-têtes personnalisées (colonnes de base des grilles)"
+"Ignore Custom Widths (Base Grid Columns)","Ignorer les largeurs personnalisées (colonnes de base des grilles)"
 "Image Height","Hauteur d'image"
 "Images URLs are used as images titles, or as result if images are not displayed or on results export. If you choose ""No"", only the images paths within the media/catalog directory will be displayed.","Les URLs d'images sont utilisées comme titres d'images, ou comme résultat si les images ne sont pas affichées ou à l'export des résultats. Si vous choisissez ""Non"", seulement le chemin des images dans le répertoire media/catalog sera affiché"
 "Image Width","Largeur d'image"
@@ -262,12 +280,15 @@
 "Lesser than or equal to","Inférieur ou égal à"
 "Levels Separator","Séparateur de niveaux"
 "List","Liste"
+"Log Error Messages","Logger les messages d'erreur"
+"Log Error Messages If Rewrite Success","Logger les messages d'erreur si succès de la réécriture"
 "Long","Long"
 "Magento Model","Modèle Magento"
 "Manage Custom Grids","Gérer les grilles personnalisées"
 "Manage Options Source","Gérer les sources d'options"
 "Maximum Qty in Cart","Quantité maximum dans le panier"
 "Medium","Moyen"
+"Merge Base Pagination Values","Fusionner les valeurs de pagination de base"
 "Merge Values (Custom on Original)","Fusionner les valeurs (personnalisée sur originale)"
 "Merge Values (Natural Order)","Fusionner les valeurs (ordre naturel)"
 "Merge Values (Original on Custom)","Fusionner les valeurs (originale sur personnalisée)"
@@ -294,6 +315,9 @@
 "Not equal","Différent"
 "BL_CustomGrid::Number","Nombre"
 "Number in Carts","Nombre dans des paniers"
+"Numeric values separated by commas","Valeurs numériques séparées par des virgules"
+"Numeric values separated by commas (default values will be overridden)","Valeurs numériques séparées par des virgules (les valeurs par défaut seront écrasées)"
+"Numeric values separated by commas. If none is set, base pagination values will be used (ie 20, 30, 50, 100, 200)","Valeurs numériques séparées par des virgules. Si aucune n'est spécifiée, les valeurs de pagination de base seront utilisées (càd 20, 30, 50, 100, 200)"
 "Only Colorize Status Cell","Seulement coloriser la cellule du statut"
 "Only for columns with time values","Seulement pour les colonnes avec des valeurs de temps"
 "Only Logged In Carts","Seulement les paniers connectés"
@@ -315,9 +339,11 @@
 "Others","Autres"
 "Page Number","Numéro de page"
 "Page Size","Taille de page"
+"Pagination Values","Valeurs de pagination"
 "Parse CMS Tags","Parser les tags CMS"
 "Payment","Paiement"
 "Permissions","Permissions"
+"Pin Pager And Mass-Actions Block","Epingler le pager et le bloc des actions de masse"
 "Please select grids to update","Merci de sélectionner des grilles à mettre à jour"
 "Please select options sources to update","Merci de sélectionner des sources d'options à mettre à jour"
 "Polls","Sondages"
@@ -344,7 +370,12 @@
 "Resource Model","Modèle de ressource"
 "Return Type","Type de retour"
 "Reviews","Commentaires"
+"Rewriting classes are automatically eval()ed at runtime.<br /><strong>eval() must be available on your server</strong>.","Les classes de réécriture sont automatiquement eval()uées à l'exécution.<br /><strong>eval() doit être disponible sur votre serveur</strong>."
+"Rewriters Configuration","Configuration - Réécriveurs"
+"Rewriters Configuration (Menu Link)","Configuration - Réécriveurs (lien du menu)"
+"Rewriters with lower priority values are used first","Les réécriveurs avec les valeurs de priorité les plus basses sont utilisés en premier"
 "Rewriting Class","Classe de réécriture"
+"Rewriting classes are automatically generated in corresponding files inside the <span>app/code/community/BL/CustomGrid/Block/Rewrite</span> directory.<br />Each file is only re-generated when the rewrite code is significantly changed.<br /><strong>Check your folder permissions before using this method.</strong>","Les classes de réécriture sont automatiquement générées dans des fichiers correspondants à l'intérieur du répertoire <span>app/code/community/BL/CustomGrid/Block/Rewrite</span>.<br />Chaque fichier n'est re-généré que quand le code de la réécriture a changé significativement.<br /><strong>Vérifiez les permissions du répertoire avant d'utiliser cette méthode.</strong>"
 "Right","Droite"
 "Role Users","Utilisateurs du rôle"
 "Save","Sauvegarder"
@@ -355,7 +386,7 @@
 "Selectable Store View","Vue magasin sélectionnable"
 "Selectable Renderer","Rendu sélectionnable"
 "Settings","Paramètres"
-"Setup","Paramétrage"
+"Setup","Configuration"
 "Shipping","Livraison"
 "Shipping Address","Adresse de livraison"
 "Short","Court"
@@ -426,6 +457,7 @@
 "This value is not editable","Cette valeur n'est pas éditable"
 "This value is not editable for rewrites corresponding to a product and/or a category","Cette valeur n'est pas éditable pour les réécriture correspondant à un produit et/ou une catégorie"
 "This value is not editable for system rewrites","Cette valeur n'est pas éditable pour les réécritures système"
+"This value will replace the original default value from the grids. If the default value (either this one or, if it is not set, the original) can not be found in the pagination values used for the current grid, the smallest available pagination value will be used by default","Cette valeur remplacera la valeur par défaut d'origine des grilles. Si la valeur par défaut (celle-ci ou, si elle n'est pas définie, l'originale) ne peut pas être trouvée dans les valeurs de pagination utilisées pour la grille actuelle, la plus petite valeur de pagination disponible sera utilisée par défaut"
 "Total (%s)","Total (%s)"
 "Total of %d grid(s) have been deleted.","%d grille(s) a (ont) été effacée(s)."
 "Total of %d grid(s) have been disabled.","%d grille(s) a (ont) été désactivée(s)."
