--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -24,6 +24,8 @@
 "Allow SQL Wildcards In Filter","Autoriser les wildcards SQL dans le filtre"
 "An error occured while initializing order items","Une erreur est survenue à l'initialisation des articles de la commande"
 "An error occured while initializing items block","Une erreur est survenue à l'initialisation du bloc des articles"
+"An error occured while eval()ing the rewrite code : ""%s""","Une erreur est survenue à l'eval()uation du code de la réécriture : ""%s"""
+"An error occured while rewriting ""%s"" : ""%s"" (rewriter: ""%s"")","Une erreur est survenue à la réécriture de ""%s"" : ""%s"" (réécriveur : ""%s"")"
 "Applies by default the use of an ""options"" renderer with customer group values (still overridable by rendering options)","Applique par défaut l'utilisation d'un rendu ""Options"" avec les valeurs des groupes client (écrasable par les options de rendu)"
 "Apply","Appliquer"
 "Apply Configuration","Appliquer la configuration"
@@ -189,6 +191,7 @@
 "Escape HTML","Echapper le HTML"
 "EU Countries","Pays de l'UE"
 "EU Country","Pays de l'UE"
+"eval() is not available on your server","eval() n'est pas disponible sur votre serveur"
 "eval()ed Classes","Classes eval()uées"
 "Exact Filter","Filtre exact"
 "Exceptions Handling Mode","Mode de gestion des exceptions"
@@ -435,9 +438,11 @@
 "The filtered products must belong to all chosen categories","Les produits filtrés doivent appartenir à toutes les catégories choisies"
 "The filtered products must belong to at least one chosen category","Les produits filtrés doivent appartenir à au moins une catégorie choisie"
 "The filtered products must not belong to any of the chosen categories","Les produits filtrés ne doivent appartenir à aucune des catégories choisies"
+"The generated rewriting class ""%s""" can not be found","La classe de réécriture générée ""%s"" n'a pas pu être trouvée"
 "The name is not editable for this customer group","Le nom n'est pas éditable pour ce groupe de clients"
 "The options source has been successfully deleted.","La source d'options a bien été effacée."
 "The options source has been successfully saved.","La source d'options a bien été sauvegardée."
+"The original class ""%s"" does not exist","La classe originale ""%s"" n'existe pas"
 "The product is not associated to the corresponding website","Le produit n'est pas associé au site web correspondant"
 "The quantity is not editable for composite products","La quantité n'est pas éditable pour les produits composés"
 "The quantity is not editable for this product","La quantité n'est pas éditable pour ce produit"
@@ -445,6 +450,7 @@
 "The requested attribute renderer does not exist...","Le renderer d'attribut demandé n'existe pas..."
 "The requested column type does not exist...","Le type de colonne demandé n'existe pas"
 "The requested custom column does not exist...","La colonne personnalisée demandée n'existe pas"
+"The rewriting class ""%s"" already exists","La classe de réécriture ""%s"" existe déjà"
 "The value could not be saved","La valeur n'a pas pû être sauvegardée"
 "The value edit block could not be retrieved","Le bloc d'édition de la valeur n'a pas pû être récupéré"
 "This attribute is locked","Cet attribut est verrouillé"
