--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -173,7 +173,11 @@
 "Drag'n'drop is the most convenient way for sorting columns, but imposes their order number, and may be slow in some cases.<br />Choose ""<strong>No</strong>"" to specify columns orders numbers directly in corresponding text fields.","Le drag'n'drop est la manière la plus commode de trier les colonnes, mais impose leur numéro d'ordre, et peut être lent dans certains cas.<br />Choisissez ""<strong>Non</strong>"" pour spécifier les numéros d'ordre de colonnes directement dans les champs texte correspondants."
 "Duplicated","Dupliqués"
 "EAG - Base Configuration","EAG - Configuration de base"
+"EAG - Errors","EAG - Erreurs"
+"EAG - Messages","EAG - Messages"
 "EAG - Rewriters Configuration","EAG - Configuration des réécriveurs"
+"EAG - Successes","EAG - Succès"
+"EAG - Warnings","EAG - Avertissements"
 "Edit","Editer"
 "Edit Columns Values","Editer les valeurs des colonnes"
 "Edit Default Parameters","Editer les paramètres par défaut"
