added an option to force grid rewrites

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -229,6 +229,7 @@
 "for filtering only","pour filtrage seulement"
 "For sources with multiple levels of options, display labels of all levels, and not just last one","Pour les sources avec des niveaux multiples d'options, affiche les libellés de tous les niveaux plutôt que juste le dernier"
 "Force Custom Value","Forcer la valeur personnalisée"
+"Force Grid Rewrites","Forcer les réécritures de grille"
 "Force Original Value","Forcer la valeur originale"
 "Force use of default options source","Forcer l'utilisation de la source d'options par défaut"
 "Forcing a value only applies when it does exist","Forcer une valeur ne s'applique que lorsqu'elle existe"
@@ -428,8 +429,10 @@
 "Tax Rules","Règles de taxe"
 "Telephone","Téléphone"
 "Terms and Conditions","Conditions générales de vente"
+"Test this option when the customization button does not appear whereas it should (usually, when this error message is shown: ""The [grid type] grid was not rewrited"").","Testez cette option quand le bouton de personnalisation n'apparaît pas alors qu'il devrait (généralement, quand ce message d'erreur est affiché : ""La grille [type de grille] n'a pas été réécrite"")"
 "Text","Texte"
 "The ""%s"" custom column could not be applied : ""%s""","La colonne personnalisée ""%s"" n'a pû etre appliquée : ""%s"""
+"The ""%s"" grid was not rewrited","La grille ""%s"" n'a pas été réécrite"
 "The ""Mage_CatalogInventory""" module is disabled","Le module ""Mage_CatalogInventory"" est désactivé"
 "The behaviour of this list depends on the value of ""<strong>Complementary Exceptions Handling Mode</strong>""<br />""<strong>Exclude</strong>"" :<br />List here all the grids that should not be rewrited.<br />""<strong>Allow</strong>"" :<br />List here only the grids that should be rewrited. Notice that if the list is empty, no grid at all will be rewrited.<br /><br />Use "" <strong>*</strong> "" to match any number of characters, "" <strong>.</strong> "" to match exactly one character.","Le comportement de cette liste dépend de la valeur de ""<strong>Mode de gestion des exceptions complémentaires</strong>""<br />""<strong>Exclure</strong>"" :<br />Listez ici toutes les grilles qui ne devraient pas être réécrites.<br />""<strong>Autoriser</strong>"" :<br />Listez ici seulement les grilles qui devraient être réécrites. Notez que si la liste est vide, aucune grille ne sera réécrite.<br /><br />Utilisez "" <strong>*</strong> "" pour remplacer n'importe quel nombre de caractères, "" <strong>.</strong> "" pour remplacer exactement un caractère."
 "The block is not valid","Le bloc n'est pas valide"
