- implemented filter modes for text columns (including regexes) - when added multiple times for a same store view, attributes are now only joined once - fix for renderer default values

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -144,6 +144,8 @@
 "Copy To","Copier vers"
 "Copy To Existing Profile","Copier vers un profil existant"
 "Copy To New Profile","Copier vers un nouveau profil"
+"Could not apply the regex filter","Impossible d'appliquer le filtre regex"
+"Could not apply the regex filter : ""%s""","Impossible d'appliquer le filtre regex : ""%s"""
 "Could not assign the specified profile","Impossible d'assigner le profil spécifié"
 "Could not choose as default the specified profile","Impossible de choisir comme défaut le profil spécifié"
 "Could not copy the specified profile","Impossible de copier le profil spécifié"
@@ -151,6 +153,7 @@
 "Could not edit the specified profile","Impossible d'éditer le profil spécifié"
 "Could not get reflected value for ""%s""","Impossible d'obtenir une valeur de réflexion pour ""%s"""
 "Could not go to the specified profile","Impossible d'aller au profil spécifié"
+"Could not inject regex","Impossible d'injecter la regex"
 "Could not reload the grid. Please reload it manually to apply any change","Impossible de recharger la grille. Veuillez la recharger manuellement pour appliquer les changements"
 "Could not write to the file","Impossible d'écrire dans le fichier"
 "Country","Pays"
@@ -349,6 +352,7 @@
 "Invalid dimension given : ""%s""","Dimension invalide donnée : ""%s"""
 "Invalid grid","Modèle de grille invalide"
 "Invalid reflected value requested : ""%s""","Valeur de réflexion demandée invalide : ""%s"""
+"Invalid regex : ""%s""","Regex invalide : ""%s"""
 "Invalid request","Requête invalide"
 "IP Address","Adresse IP"
 "Items","Articles"
@@ -359,6 +363,8 @@
 "Lesser than","Inférieur à"
 "Lesser than or equal to","Inférieur ou égal à"
 "Levels Separator","Séparateur de niveaux"
+"LIKE (between %)","LIKE (entre %)"
+"LIKE (exact)","LIKE (exact)"
 "List","Liste"
 "Log Error Messages","Logger les messages d'erreur"
 "Log Error Messages If Rewrite Success","Logger les messages d'erreur si succès de la réécriture"
@@ -387,6 +393,7 @@
 "Must be exactly one character, differing from the wildcard for single character. If no valid value is set, no wildcard of this kind will be available at all","Doit être exactement un caractère, différent de la wildcard pour un seul caractère. Si aucune valeur valide n'est renseignée, aucune wildcard de ce type ne sera disponible"
 "My Role (%s)","Mon rôle (%s)"
 "Name","Nom"
+"Negative Filter","Filtre négatif"
 "New Options Source","Nouvelle source d'options"
 "New Profile","Nouveau profil"
 "No","Non"
@@ -452,6 +459,7 @@
 "Quantity in Wishlists","Quantité dans des listes d'envies"
 "Qty to become Out of Stock","Quantité pour devenir épuisé"
 "Reapply Default Filter","Réappliquer le filtre par défaut"
+"Regular Expression","Expression régulière"
 "Remove Custom Default Grid Parameters:","Supprimer les défauts personnalisés de la grille :" 
 "Remove Empty Value","Enlever la valeur vide"
 "Renderer is not specified","Le renderer n'est pas spécifié"
@@ -620,6 +628,7 @@
 "Will display nothing when exporting results","N'affichera rien à l'export des résultats"
 "Wishlists Number","Nombre de listes d'envies"
 "With","Avec"
+"With/Without Value","Avec/Sans valeur"
 "With/Without Filter","Filtre avec/sans"
 "Without","Sans"
 "Yes","Oui"
