renamed the default grid profile

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -187,9 +187,8 @@
 "Date","Date"
 "Date + Time","Date + temps"
 "Date / Date + Time","Date / Date + temps"
-"Default","Défaut"
+"BL_CustomGrid::Default","Défaut"
 "Default (Last Set Value is Used)","Défaut (la dernière valeur spécifiée est utilisée)"
-"Default Grid Profile","Défaut"
 "Default Options Source","Source d'options par défaut"
 "Default Pagination Value","Valeur de pagination par défaut"
 "Default Parameters Behaviours","Comportements des paramètres par défaut"
