implemented context menu for the profiles list, in place of the actions <select> (left-click to go to a profile, right-click to view all the available actions)

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -538,6 +538,7 @@
 "The custom grid has been successfully updated","La grille personnalisée a bien été mise à jour"
 "The default parameters have been successfully updated","Les paramètres par défaut ont bien été mis à jour"
 "The edited entity could not be loaded","L'entité éditée n'a pas pû être chargée"
+"The edited profile is not available anymore","Le profil édité n'est plus disponible"
 "The filtered products must belong to all of the chosen categories","Les produits filtrés doivent appartenir à toutes les catégories choisies"
 "The filtered products must belong to at least one chosen category","Les produits filtrés doivent appartenir à au moins une catégorie choisie"
 "The filtered products must not belong to any of the chosen categories","Les produits filtrés ne doivent appartenir à aucune des catégories choisies"
