implemented dynamic configuration shortcuts for the text filters

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -1,3 +1,6 @@
+"[el] LIKE (exact)","[el] LIKE (exact)"
+"[il] LIKE (between %)","[il] LIKE (entre %)"
+"[re] Regular Expression","[re] Expression régulière"
 """%s"" Background Color","Couleur de fond pour ""%s"""
 """%s"" Text Color","Couleur du texte pour ""%s"""
 "(%s/%s)","(%s/%s)"
@@ -25,6 +28,8 @@
 "Allow","Autoriser"
 "Allow Filtering On Time","Permettre de filtrer sur le temps"
 "Allow SQL Wildcards In Filter","Autoriser les wildcards SQL dans le filtre"
+"Allows to specify the filter mode directly in the filter field, by placing the corresponding code between square brackets at the beginning of the searched value.<br />Eg, use ""<strong>[el]</strong>Example"" to search for ""Example"" using ""LIKE (exact)"".<br />If no filter mode is indicated in the field, then the value of ""Filter Mode"" will be used by default","Permet de spécifier le mode de filtrage directement depuis le champ du filtre, en plaçant le code correspondant entre crochets au début de la valeur recherchée.<br />Par exemple, utilisez ""<strong>[el]</strong>Exemple"" pour faire une recherche sur ""Exemple"" en utilisant ""LIKE (exact)"".<br />Si aucun mode de filtrage n'est indiqué dans le champ, alors la valeur de ""Mode de filtrage"" sera utilisée par défaut"
+"Allows to trigger negative filter directly from the filter field, by placing the character ""<strong>!</strong>"" between square brackets at the beginning of the searched value (eg: ""<strong>[!]</strong>Example"").<br />If the code of a filter mode is already present in the value, then place the character ""<strong>!</strong>"" in front of it (eg: ""<strong>[!el]</strong>Example"")","Permet de déclencher le filtrage négatif directement depuis le champ du filtre, en plaçant le caractère ""<strong>!</strong>"" entre crochets au début de la valeur recherchée (par exemple : ""<strong>[!]</strong>Exemple"").<br />Si le code d'un mode de filtrage est déjà présent dans la valeur, alors placec le caractère ""<strong>!</strong>"" devant (par exemple : ""<strong>[!el]</strong>Exemple"")"
 "An error occured while applying the action","Une erreur est survenue à l'application de l'action"
 "An error occured while applying the values","Une erreur est survenue à l'application des valeurs"
 "An error occured while deleting a grid","Une erreur est survenue à la suppression d'une grille"
@@ -258,6 +263,8 @@
 "Enable","Activer"
 "Enable / Disable","Activer / désactiver"
 "Enable / Disable Grids","Activer / désactiver les grilles"
+"Enable Filter Mode Shortcut","Activer le raccourci pour le mode de filtrage"
+"Enable Negative Filter Shortcut","Activer le raccourci pour le filtrage négatif"
 "Enabled","Activé"
 "Enabled/Disabled","Activé/Désactivé"
 "Equal","Egal"
@@ -288,6 +295,7 @@
 "Filter","Filtre"
 "Filter images on name","Filtrer les images sur le nom"
 "Filter Mode","Mode de filtrage"
+"Filter mode shortcut is not enabled (used in ""%s"")","Le raccourci pour le mode de filtrage n'est pas activé (utilisé dans ""%s"")"
 "Filter on ""Use Config""","Filtrer sur ""Utiliser les paramètres de la configuration"""
 "Filter on Item Name","Filtrer sur le nom des articles"
 "Filter on Item SKU","Filtrer sur la référence des articles"
@@ -362,8 +370,6 @@
 "Lesser than","Inférieur à"
 "Lesser than or equal to","Inférieur ou égal à"
 "Levels Separator","Séparateur de niveaux"
-"LIKE (between %)","LIKE (entre %)"
-"LIKE (exact)","LIKE (exact)"
 "List","Liste"
 "Log Error Messages","Logger les messages d'erreur"
 "Log Error Messages If Rewrite Success","Logger les messages d'erreur si succès de la réécriture"
@@ -393,6 +399,7 @@
 "My Role (%s)","Mon rôle (%s)"
 "Name","Nom"
 "Negative Filter","Filtre négatif"
+"Negative filter shortcut is not enabled (used in ""%s"")","Le raccourci pour le filtrage négative n'est pas activé (utilisé dans ""%s"")"
 "New Options Source","Nouvelle source d'options"
 "New Profile","Nouveau profil"
 "No","Non"
@@ -458,7 +465,6 @@
 "Quantity in Wishlists","Quantité dans des listes d'envies"
 "Qty to become Out of Stock","Quantité pour devenir épuisé"
 "Reapply Default Filter","Réappliquer le filtre par défaut"
-"Regular Expression","Expression régulière"
 "Remove Custom Default Grid Parameters:","Supprimer les défauts personnalisés de la grille :" 
 "Remove Empty Value","Enlever la valeur vide"
 "Renderer is not specified","Le renderer n'est pas spécifié"
@@ -622,13 +628,13 @@
 "When an image height is specified, the image width is also required","Quand une hauteur d'image est spécifiée, la largeur d'image est également requise"
 "When an image width is specified, the image height is also required","Quand une largeur d'image est spécifiée, la hauteur d'image est également requise"
 "Width","Largeur"
-"Wildcard for single character","Wildcard pour un seul caractère"
-"Wildcard for multiple characters","Wildcard pour de multiples caractères"
+"Wildcard for single character (LIKE filters)","Wildcard pour un seul caractère (filtres LIKE)"
+"Wildcard for multiple characters (LIKE filters)","Wildcard pour de multiples caractères (filtres LIKE)"
 "Will be used for profiles created by users who do not have the permission to assign profiles to roles","Sera utilisé pour les profils créés par des utilisateurs n'ayant pas la permission d'assigner les profils aux rôles"
 "Will display nothing when exporting results","N'affichera rien à l'export des résultats"
 "Wishlists Number","Nombre de listes d'envies"
 "With","Avec"
-"With/Without Value","Avec/Sans valeur"
+"With/Without Value","Avec/sans valeur"
 "With/Without Filter","Filtre avec/sans"
 "Without","Sans"
 "Yes","Oui"
